--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,61 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-light bg-light navbar-expand-sm fixed-top">
+    <div class="container-fluid">
+      <%= link_to "Job Finder", root_path, class: "navbar-brand text-primary" %> 
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav justify-content-end">
+        <li class="nav-item">
+          <%= link_to "Home", root_path, class: "nav-link text-primary" %> 
+        </li>
+        <li class="nav-item">
+          <%= link_to "Create Job Post", new_job_path, class: "nav-link text-primary" %> 
+        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= content_tag :p, class: "nav-item" do %>
+              <%= link_to edit_user_path(current_user), class: "nav-link" do %>
+                Hello <%= current_user.first_name %>
+              <% end %>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Logout", sessions_destroy_path, method: :delete, class: "nav-link text-primary" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", new_sessions_path, class: "nav-link text-primary" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Up", new_user_path, class: "nav-link text-primary" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+
+  </nav>
+    <div class="container" style="margin-top: 5rem;">
+      <% if flash[:notice] %>
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+          <%= flash[:notice] %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+          <% end %>
+      <% if flash[:alert] %>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <%= flash[:alert] %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      <% end %>
+      <div class="container" style="margin-top: 8rem;">
+      <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
