added home/jobs/sessions/users views

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,7 +7,7 @@
                         <%= link_to job.title, job_path(job) %>
                         </h5>
                         <p class="card-text">
-                        <%= job.description.truncate(40) %>
+                        <%= job.description %>
                         </p>
                     </div>
                 </div>
