--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,17 +4,17 @@
     <h4 class="card-subtitle mb-2 text-body-secondary"><%= @job.company %> | <%= @job.location %></h4>
     <p class="card-text"><%= @job.description%></p>
 
-    <p>
-    Updated <%= time_ago_in_words(@job.updated_at) %> ago</p>
-    <small><%= @job.view_count %> people are watched this job</small>
-    <small><%= @job.saved_count %> peopel are saved this job</small>
+    <p>Updated <%= time_ago_in_words(@job.updated_at) %> ago</p>
+    <div class="d-flex flex-column">
+      <small><%= @job.view_count %> people are watched this job</small>
+      <small><%= @job.saved_count %> people are saved this job</small>
+    </div>
 
-    <% if current_user && current_user == @job.user %>
-    <%= button_to "Edit", edit_job_path(@job), class: "btn btn-outline-primary" %>
-    <%= button_to "Delete", job_path(@job), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
-    <% end %>
-
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+    <div class="d-flex">
+      <% if current_user && current_user == @job.user %>
+      <%= link_to "Edit", edit_job_path(@job), class: "btn btn-outline-primary" %>
+      <%= button_to "Delete", job_path(@job), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger delete-btn" %>
+      <% end %>
+    </div>
   </div>
 </div>
