--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -34,5 +34,10 @@
     <%= f.password_field :password_confirmation, class: "form-control" %>
     </div>
 
+    <div class="form-group mt-3">
+    <%= f.label :is_recruiter, "Are you a recruiter?" %>
+    <%= f.check_box :is_recruiter %>
+    </div>
+
     <%= f.submit class: "btn btn-primary w-100 mt-3" %>
 <% end %>
