--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
         <li class="nav-item">
           <%= link_to "Create Job Post", new_job_path, class: "nav-link text-primary" %> 
         </li>
+        <li class="nav-item">
+          <%= link_to "Show Applied Jobs", apply_index_path, class: "nav-link text-primary" %> 
+        </li>
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= content_tag :p, class: "nav-item" do %>
