--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -30,3 +30,38 @@
     </div>
   </div>
 </div>
+
+<hr>
+
+<% if current_user && !@apply.present?  %>
+  <% @review = @job.reviews.find_by(user_id: current_user.id) %>
+  <%= link_to "Write a Review", new_job_review_path(@job), class: "btn btn-primary w-100 mt-3" %>
+<% end %>
+
+<h2 class="mt-3">Reviews</h2>
+
+<% @job.reviews.each do |review| %>
+  <div>
+  <p><%= review.rating %> / 5</p>
+    <h3><%= review.title %></h3>
+    <small>
+      <%= review.job_title %>
+      ( <%= review.is_current ? 'Current Employee' : 'Former Employee' %> ) - 
+      <%= review.location %>
+    </small>
+    <p><%= review.content %></p>
+
+    <% if review.user %>
+      <small>Posted on <%= review.created_at.strftime("%d %b, %Y" ) %></small>
+    <% end %>
+    
+    <div class="d-flex">
+    <% if can?(:delete, review) %>
+        <%= button_to 'Delete', job_review_path(@job, review), method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure?" } %>
+    <% end %>
+    </div>
+  </div>
+  <hr>
+<% end %>
+
+<%= link_to "Back", jobs_path %>
