--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,10 @@
 .delete-btn{
     margin-left: 10px;
 }
+
+.show-title {
+    display: flex !important;
+    flex-direction: row !important ;
+    justify-content: space-between !important ;
+    align-items: center !important ;
+}
