--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,9 @@
         <li class="nav-item">
           <%= link_to "Show Applied Jobs", apply_index_path, class: "nav-link text-primary" %> 
         </li>
+        <li class="nav-item">
+          <%= link_to "Show Saved Jobs", liked_jobs_path, class: "nav-link text-primary" %> 
+        </li>
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= content_tag :p, class: "nav-item" do %>
