--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,15 +24,22 @@
         <li class="nav-item">
           <%= link_to "Home", root_path, class: "nav-link text-primary" %> 
         </li>
-        <li class="nav-item">
-          <%= link_to "Create Job Post", new_job_path, class: "nav-link text-primary" %> 
-        </li>
-        <li class="nav-item">
-          <%= link_to "Show Applied Jobs", apply_index_path, class: "nav-link text-primary" %> 
-        </li>
-        <li class="nav-item">
-          <%= link_to "Show Saved Jobs", liked_jobs_path, class: "nav-link text-primary" %> 
-        </li>
+        <% if user_recruiter? %>
+          <li class="nav-item">
+            <%= link_to "Create Job Post", new_job_path, class: "nav-link text-primary" %> 
+          </li>
+          <li class="nav-item">
+            <%= link_to "See Applicants", new_job_path, class: "nav-link text-primary" %> 
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Show Applied Jobs", apply_index_path, class: "nav-link text-primary" %> 
+          </li>
+          <li class="nav-item">
+            <%= link_to "Show Saved Jobs", liked_jobs_path, class: "nav-link text-primary" %> 
+          </li>
+        <% end %>
+
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= content_tag :p, class: "nav-item" do %>
