--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Your Applied Jobs</h1>
 
-<% if @apply&.any? %>
+<% if @applies&.any? %>
   <div class="card">
     <ul class="list-group list-group-flush">
-      <% @apply.each do |a| %>
+      <% @applies.each do |a| %>
         <li class="list-group-item">
           <%= link_to a.job do %>
             <%= a.job.title %>
@@ -13,7 +13,7 @@
     </ul>
   </div>
 <% else %>
-  <h4>You haven't joined anything yet!</h4>
+  <h4>You haven't applied to yet!</h4>
 <% end %>
 
 <%= link_to "Back", root_path, class: "btn btn-primary mt-3" %>
