--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,11 @@
             <%= link_to "Create Job Post", new_job_path, class: "nav-link text-primary" %> 
           </li>
           <li class="nav-item">
-            <%= link_to "See Applicants", new_job_path, class: "nav-link text-primary" %> 
+            <%= link_to "See Applications", applies_path, class: "nav-link text-primary" %> 
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Show Applied Jobs", apply_index_path, class: "nav-link text-primary" %> 
+            <%= link_to "Show Applied Jobs", applies_index_path, class: "nav-link text-primary" %> 
           </li>
           <li class="nav-item">
             <%= link_to "Show Saved Jobs", liked_jobs_path, class: "nav-link text-primary" %> 
