added status function

--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -4,10 +4,13 @@
   <div class="card">
     <ul class="list-group list-group-flush">
       <% @applies.each do |a| %>
-        <li class="list-group-item">
+        <li class="list-group-item d-flex flex-direction-between">
           <%= link_to a.job do %>
             <%= a.job.title %>
           <% end %>
+          <div class="badge_gap">
+            <span class="badge bg-primary rounded-pill"><%= a.status %></span>
+          </div>
         </li>
       <% end %>
     </ul>
