--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -35,6 +35,11 @@
     </div>
 
     <div class="form-group mt-3">
+    <%= f.label :resume, "Resume (Optional)" %>
+    <%= f.file_field :resume, class: "form-control" %>
+    </div>
+
+    <div class="form-group mt-3">
     <%= f.label :is_recruiter, "Are you a recruiter?" %>
     <%= f.check_box :is_recruiter %>
     </div>
