--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,31 @@
 <h3>User Information</h3>
 <table class="table">
-    <thead>
-        <tr>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Email</th>
-        </tr>
-    </thead>
-        <tr>
-            <td><%= @user.first_name %></td>
-            <td><%= @user.last_name %></td>
-            <td><%= @user.email %></td>
-        </tr>
+  <thead>
+    <tr>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Resume</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><%= @user.first_name %></td>
+      <td><%= @user.last_name %></td>
+      <td><%= @user.email %></td>
+      <td>
+        <% if @user.resume.attached? %>
+          <%= link_to "Download Resume", rails_blob_path(@user.resume, disposition: "attachment") %>
+          <br>
+          <iframe src="<%= url_for(@user.resume) %>" width="100%" height="600px"></iframe>
+        <% else %>
+          No resume attached.
+        <% end %>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <% if @user == current_user %>
-    <%= link_to "Edit User Information", edit_user_path(current_user), class: "btn btn-primary" %>
+  <%= link_to "Edit User Information", edit_user_path(current_user), class: "btn btn-primary" %>
 <% end %>
