--- a/app/views/responses_mailer/new_apply.html.erb
+++ b/app/views/responses_mailer/new_apply.html.erb
@@ -1,11 +1,10 @@
 <p>Hello <%= @owner.first_name %>,</p>
 
-<p>You have receiveed a new application to your job:</p>
+<p>You have received a new application to your job:</p>
 
 <h3>Job: <%= @job.title %></h3>
 
-<h5>Application: <%= @apply.current_user %></h5>
-<%= link_to "Show Application", applies_path %>
+<h5>Applicants: <%= @applies.user.full_name %></h5>
 
-<p>Best regards,</p>
-<p>Job Finder Team</p>
+<p>Best regards,
+Job Finder Team</p>
