--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,6 @@
-    <%= form_tag(jobs_path, method: :get, params: { q: @q }) do %>
-        <%= text_field_tag :q, @q, placeholder: "Search By Title" %>
-        <%= submit_tag "Search!" %>
+    <%= form_with(url: jobs_path, method: :get) do |form| %>
+        <%= form.text_field :q, value: @q, placeholder: "Search By Title", class: "form-control" %>
+        <%= form.submit "Search!", class: "btn btn-outline-primary" %>
     <% end %>
     
     <div class="row">
