--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -8,7 +8,7 @@
 </ul>
 <% end %>
 
-<%= form_for @job do |f| %>
+<%= form_with(model: @job, url: jobs_path, method: :post) do |f| %>
     <div class="form-group mt-3">
     <%= f.label :title %>
     <%= f.text_field :title, autofocus: true, placeholder: 'Web Developer', class: "form-control" %>
@@ -27,6 +27,11 @@
     <div class="form-group mt-3">
     <%= f.label :location %>
     <%= f.text_field :location, placeholder: 'Vancouver', class: "form-control" %>
+    </div>
+
+    <div class="form-group mt-3">
+    <%= f.label :job_type %>
+    <%= f.select :job_type, ['Full-Time', 'Part-Time', 'Contract', 'Internship/Co-op'], { prompt: 'Select Job Type' }, class: "form-control" %>
     </div>
 
     <%= f.submit class: "btn btn-primary w-100 mt-3" %>
