--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,10 @@
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
       <th scope="col">Email</th>
-      <th scope="col">Resume</th>
+      <% if !@user.is_recruiter? %>
+        <th scope="col">Resume</th>
+      <% end %>
+      <th scope="col">Recruiter</th>
     </tr>
   </thead>
   <tbody>
@@ -13,6 +16,7 @@
       <td><%= @user.first_name %></td>
       <td><%= @user.last_name %></td>
       <td><%= @user.email %></td>
+      <% if !@user.is_recruiter? %>
       <td>
         <% if @user.resume.attached? %>
           <%= link_to "Download Resume", rails_blob_path(@user.resume, disposition: "attachment") %>
@@ -22,6 +26,8 @@
           No resume attached.
         <% end %>
       </td>
+      <% end %>
+      <td><%= @user.is_recruiter? ? 'Yes' : 'No' %></td>
     </tr>
   </tbody>
 </table>
