--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -29,5 +29,10 @@
     <%= f.text_field :location, class: "form-control" %>
     </div>
 
+    <div class="form-group mt-3">
+    <%= f.label :job_type %>
+    <%= f.select :job_type, ['Full-Time', 'Part-Time', 'Contract'], { prompt: 'Select Job Type' }, class: "form-control" %>
+    </div>
+
     <%= f.submit class: "btn btn-primary w-100 mt-3" %>
 <% end %>
