--- a/app/views/jobs/liked.html.erb
+++ b/app/views/jobs/liked.html.erb
@@ -2,9 +2,15 @@
     <% if @jobs.empty? %>
         <h2> No Saved jobs </h2>
     <% else %>
-        <% @jobs.each do |job| %>
-            <div>
-                <h3><%= link_to(job.title,job_path(job)) %> </h3>
-            </div>
-        <% end %>
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            <% @jobs.each do |job| %>
+                <li class="list-group-item d-flex flex-direction-between">
+                    <%= link_to(job.title,job_path(job)) %> 
+                </li>
+            <% end %>
+        </ul>
+    </div>
     <% end %>
+
+<%= link_to "Back", root_path, class: "btn btn-primary mt-3" %>
