--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-    <%= form_with(url: jobs_path, method: :get, class: "row g-3") do |form| %>
+    <%= form_with(url: jobs_path, method: :get, class: "row g-3 justify-content-center") do |form| %>
         <%= form.text_field :q, value: @q, placeholder: "Search By Title", class: "col-auto form-control w-75" %>
         <%= form.submit "Search!", class: "col-auto btn btn-outline-primary search-btn" %>
     <% end %>
