--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -38,3 +38,7 @@
 <div class="mt-3">
   <%= link_to "Change Password ->", change_password_user_path %>
 </div>
+
+<div class="mt-3">
+<%= link_to 'Delete User', user_path(@user), method: :delete, data: { confirm: 'Are you sure you want to delete this user?' }, class: 'btn btn-danger' %>
+</div>
