fixed bug of session/destroy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to "Logout", sessions_destroy_path, method: :delete, class: "nav-link text-primary" %>
+            <%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link text-primary' %>
           </li>
         <% else %>
           <li class="nav-item">
