--- a/app/views/jobs/applications.html.erb
+++ b/app/views/jobs/applications.html.erb
@@ -13,7 +13,15 @@
             <div class="d-flex justify-content-start">
               <%= link_to application.user.full_name, application.user %>
               <div class="badge_gap">
-                <span class="badge bg-primary rounded-pill"><%= application.status %></span>
+                <% if application.status == "Reject" %>
+                  <span class="badge bg-danger rounded-pill"><%= application.status %></span>
+                  <% elsif application.status == "Shortlisted" %>
+                  <span class="badge bg-primary rounded-pill"><%= application.status %></span>
+                  <% elsif application.status == "Interview" %>
+                  <span class="badge bg-success rounded-pill"><%= application.status %></span>
+                  <% else %>
+                  <span class="badge bg-secondary rounded-pill"><%= application.status %></span>
+                <% end %>
               </div>
             </div>
             
