--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,12 +1,21 @@
+<% if @review.errors.any? %>
+<ul>
+    <% @review.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+    <% end %>
+</ul>
+<% end %>
+
+
 <%= form_with model: [@job, @review], url: job_reviews_path(@job.id) do |form| %>
   <div class="form-group mt-3">
     <%= form.label :title %>
-    <%= form.text_field :title, class: "form-control" %>
+    <%= form.text_field :title, :require => true, class: "form-control" %>
   </div>
 
   <div class="form-group mt-3">
     <%= form.label :job_title %>
-    <%= form.text_field :job_title, class: "form-control" %>
+    <%= form.text_field :job_title, :require => true, class: "form-control" %>
   </div>
 
   <div class="form-group mt-3">
@@ -21,12 +30,12 @@
 
   <div class="form-group mt-3">
     <%= form.label :rating %>
-    <%= form.number_field :rating, class: "form-control" %>
+    <%= form.number_field :rating, :require => true, class: "form-control" %>
   </div>
 
   <div class="form-group mt-3">
     <%= form.label :content %>
-    <%= form.text_area :content, class: "form-control" %>
+    <%= form.text_area :content, :require => true, class: "form-control" %>
   </div>
 
   <%= form.submit "Create Review", class: "btn btn-primary mt-3" %>
