--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JobFinder</title>
+    <title>Jobber</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-light bg-light navbar-expand-sm fixed-top">
     <div class="container-fluid">
-      <%= link_to "Job Finder", root_path, class: "navbar-brand text-primary" %> 
+      <%= link_to "Jobber", root_path, class: "navbar-brand text-primary" %> 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
